Displays current price on the top-right of the page.

--- a/graph/graph.html
+++ b/graph/graph.html
@@ -10,6 +10,9 @@
     <link rel="stylesheet" type="text/css" href="../static/css/graph.css"/>
 </head>
 <body>
+    <div id="header">
+        <p>Current Price - Buy: <b><span id="buy"></span></b> Sell: <b><span id="sell"></span></b></p>
+    </div>
     <div id="graph"></div>
 </body>
 </html>
