--- a/graph/graph_sell.html
+++ b/graph/graph_sell.html
@@ -5,7 +5,7 @@
 
     <script src="../../static/js/jquery-2.1.0.js"></script>
     <script src="../../static/js/highstock.js"></script>
-    <script src="../../static/js/graph.js"></script>
+    <script src="../../static/js/graph_sell.js"></script>
 
     <link rel="stylesheet" type="text/css" href="../../static/css/graph.css"/>
 </head>
