Fixes chart update bug in graph_buy.js. Adds current and since end-ponts for /api/sell/. Modifies js and html to set up /graph/sell/.

--- a/graph/graph_sell.html
+++ b/graph/graph_sell.html
@@ -11,7 +11,7 @@
 </head>
 <body>
     <div id="header">
-        <p>Current Price - Buy: <b><span id="buy"></span></b> Sell: <b><span id="sell"></span></b></p>
+        <p>Sell: <b><span id="sell"></span></b>&nbsp SMA: <b><span id="sma"></span></b>&nbsp LMA: <b><span id="lma"></span></b>&nbsp Delta: <b><span id="delta"></span></b></p>
     </div>
     <div id="graph"></div>
 </body>
