Moves y-axis tick labels to the right side of the graph. Adds delta graphs to both "buy" and "sell" and makes the delta graphs shift when the main graph's x-range is changed.

--- a/graph/graph_buy.html
+++ b/graph/graph_buy.html
@@ -7,12 +7,13 @@
     <script src="../../static/js/highstock.js"></script>
     <script src="../../static/js/graph_buy.js"></script>
 
-    <link rel="stylesheet" type="text/css" href="../../static/css/graph.css"/>
+    <link rel="stylesheet" type="text/css" href="../../static/css/graph_delta.css"/>
 </head>
 <body>
     <div id="header">
         <p>Buy: <b><span id="buy"></span></b>&nbsp SMA: <b><span id="sma"></span></b>&nbsp LMA: <b><span id="lma"></span></b>&nbsp Delta: <b><span id="delta"></span></b></p>
     </div>
     <div id="graph"></div>
+    <div id="delta_graph"></div>
 </body>
 </html>
