Adds links to all graph pages allowing navigation between them.

--- a/graph/graph.html
+++ b/graph/graph.html
@@ -11,7 +11,8 @@
 </head>
 <body>
     <div id="header">
-        <p>Current Price - Buy: <b><span id="buy"></span></b> Sell: <b><span id="sell"></span></b></p>
+        <p class="alignleft"><a href="./buy/">Buy</a> | <a href="./sell/">Sell</a></p>
+        <p class="alignright">Current Price - Buy: <b><span id="buy"></span></b> Sell: <b><span id="sell"></span></b></p>
     </div>
     <div id="graph"></div>
 </body>
