--- a/graph/graph_buy.html
+++ b/graph/graph_buy.html
@@ -11,7 +11,8 @@
 </head>
 <body>
     <div id="header">
-        <p>Buy: <b><span id="buy"></span></b>&nbsp SMA: <b><span id="sma"></span></b>&nbsp LMA: <b><span id="lma"></span></b>&nbsp Delta: <b><span id="delta"></span></b></p>
+        <p class="alignleft"><a href="../sell/">Sell</a> | <a href="../">Both</a></p>
+        <p class="alignright">Buy: <b><span id="buy"></span></b>&nbsp SMA: <b><span id="sma"></span></b>&nbsp LMA: <b><span id="lma"></span></b>&nbsp Delta: <b><span id="delta"></span></b></p>
     </div>
     <div id="graph"></div>
     <div id="delta_graph"></div>
