--- a/graph/graph_sell.html
+++ b/graph/graph_sell.html
@@ -11,7 +11,8 @@
 </head>
 <body>
     <div id="header">
-        <p>Sell: <b><span id="sell"></span></b>&nbsp SMA: <b><span id="sma"></span></b>&nbsp LMA: <b><span id="lma"></span></b>&nbsp Delta: <b><span id="delta"></span></b></p>
+        <p class="alignleft"><a href="../buy/">Buy</a> | <a href="../">Both</a></p>
+        <p class="alignright">Sell: <b><span id="sell"></span></b>&nbsp SMA: <b><span id="sma"></span></b>&nbsp LMA: <b><span id="lma"></span></b>&nbsp Delta: <b><span id="delta"></span></b></p>
     </div>
     <div id="graph"></div>
     <div id="delta_graph"></div>
